# codi

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: __init__.py  server.py
cli/: __init__.py  main.py
core/: __init__.py  analyzer.py  build.py  cmd_parser.py  config.py  dashboard.py  detect.py  llm.py  parse.py  perf.py  render.py  report.py  rules.py  script_analyzer.py  security.py  store.py
data/: README.md  collect_github.py  download_from_r2.py  extract_cmd_scripts.py  label_smells.py  r2_utils.py  split_dataset.py  standardize.py  sync_to_r2.py  synth_pairs_from_rules.py
demo/java/: Dockerfile  README.md  pom.xml
demo/node/: README.md  package-lock.json  package.json
demo/node/pages/: index.js
demo/python/: README.md
demo/python/app/: main.py
docker/: Dockerfile.complete  Dockerfile.slim  runtime_complete.py
docker/scripts/: mount_adapter.sh  release_images.sh  verify_adapter.py
docs/: codi_mvp_prd.md  codi_mvp_tasks.md  dashboard.md  env-example.md  llm_adapter_notes.md  llm_promotion_checklist.md  performance_cpu_sanity.md  quickstart.md  runbook.md  security_verification.md
docs/dashboard/: dashboard.js  index.html  styles.css
docs/dashboard/data/: sample_runs.json
docs/deliverables/docs/: API_GUIDE.md  ARCHITECTURE.md  CICD_RELEASE.md  CLI_GUIDE.md  COMPLETE_CONTAINER.md  CONTRIBUTING.md  INDEX.md  INSTALLATION.md  INTRODUCTION.md  LLM_MODULE.md  (+10 more)
eval/: __init__.py  build_and_measure.py  eval_suite.py
models/: README.md
patterns/: rules.yml
public-repo/: README.md
tests/: __init__.py  test_api.py  test_build.py  test_cli.py  test_cmd_parser.py  test_dashboard.py  test_data_pipeline.py  test_detect.py  test_eval_suite.py  test_llm.py  test_llm_ranking.py  test_parse.py  test_perf.py  test_render.py  test_report.py  test_rules.py  test_security.py  test_smoke.py  test_store.py  test_training.py
training/qwen15b_lora/: README.md  config.yaml  create_colab_zip.py  create_colab_zip.sh  train.py  train_colab.ipynb
tune_module/: analyzer.py  docker_best_practices.md  master_plan_gem.md
tune_module/test_files/: DF-test-01.yaml  DF-test-02.yaml  DF-test-04.yaml  DF-test-05.yaml  DF-test-06.yaml  DF-test-07.yaml  DF-test-08.yaml  DF-test-09.yaml  DF-test-10.yaml
(+31 files in other folders)
