[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codi"
version = "0.1.1"
description = "CODI: Container Dietitian — rules-first, AI-assisted Dockerfile optimizer"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "KiniunCorp" }
]
license = { text = "MIT" }
keywords = [
  "docker",
  "dockerfile",
  "container",
  "optimization",
  "llm",
  "cli"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS"
]
dependencies = [
  "typer[all]>=0.12.3",
  "rich>=13.7.1",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "jinja2>=3.1.4",
  "pyyaml>=6.0.2",
  "docker>=7.1.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
codi = "cli.main:main"

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "ruff>=0.6.5",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.0",
  "types-PyYAML>=6.0.12.20240808",
  "types-requests>=2.32.0.20240914"
]
data = [
  "boto3>=1.34.0"
]
training = [
  "transformers>=4.36.0",
  "peft>=0.7.0",
  "bitsandbytes>=0.41.0",
  "datasets>=2.16.0",
  "accelerate>=0.25.0",
  "trl>=0.7.0",
  "tensorboard>=2.15.0"
]

[project.urls]
"Homepage" = "https://github.com/KiniunCorp/codi"
"Repository" = "https://github.com/KiniunCorp/codi"
"Bug Tracker" = "https://github.com/KiniunCorp/codi/issues"
"Documentation" = "https://github.com/KiniunCorp/codi/tree/main/docs/deliverables/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "cli*", "api*", "patterns*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["core", "cli", "api", "tests"]
exclude = ["training/qwen15b_lora/train_colab.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP", "RUF"]
ignore = ["E203", "E266", "E501", "B008"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
exclude = ["build/", "dist/", "docs/"]
